# production_on_day1

./: .gitignore
backend/: pyproject.toml
backend/cdk/: app.py  cdk.json  stacks.py
backend/cdk/cdk.out/: GenAiStack.assets.json  GenAiStack.template.json  manifest.json  tree.json
backend/cdk/cdk.out/asset.5991440a5e7b839c9fc59d513e9a19f6691564a6a67e7480739b686d45212cf4/micro_services/api/: handler.py  main.py  schema.py
backend/cdk/cdk.out/asset.5991440a5e7b839c9fc59d513e9a19f6691564a6a67e7480739b686d45212cf4/shared_infra/: dynamo.py  s3.py  sqs.py
backend/cdk/cdk.out/asset.5991440a5e7b839c9fc59d513e9a19f6691564a6a67e7480739b686d45212cf4/shared_tools/prompt_warehouse/: models.py
backend/cdk/cdk.out/asset.cb38af05f642b3b97c13ba572b57c24029b1597b790a795fffeb4cc265f14b78/micro_services/analyze_worker/: schema.py
backend/cdk/cdk.out/asset.cb38af05f642b3b97c13ba572b57c24029b1597b790a795fffeb4cc265f14b78/micro_services/upload_worker/: lambda_handler.py  schema.py
backend/cdk/cdk.out/asset.cb38af05f642b3b97c13ba572b57c24029b1597b790a795fffeb4cc265f14b78/shared_tools/prompt_warehouse/: registry.py
backend/src/: app_config.py  requirements.txt
backend/src/micro_services/analyze_worker/: lambda_handler.py  worker.py
backend/src/micro_services/api/: main.py
backend/src/micro_services/upload_worker/: worker.py
backend/src/shared_infra/: dynamo.py  s3.py  sqs.py
backend/src/shared_tools/completions/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  provider.py  secrets.py
backend/src/shared_tools/prompt_warehouse/: prompts.py  registry.py
(+5 files in other folders)
